mule-user-guide/v/3.2/configuring-a-transport.adoc
= Configuring a Transport

You can configure a link:/documentation-3.2/display/32X/Connecting+Using+Transports[transport] in the following ways:

* Define a connector configuration using the `<connector>` element in the Mule XML configuration file.
* Set transport properties on endpoints to customize the transport behavior for a single endpoint instance.
* Use an endpoint URI that defines the scheme and connection information for the transport, such as `tcp://localhost:12345`. See link:/documentation-3.2/display/32X/Mule+Endpoint+URIs[Mule Endpoint URIs] for more information. The URI consists of the protocol followed by transport-specific information, and then zero or more parameters to set as properties on the connector.

This page describes the common properties for all transports. The actual configuration parameters for each transport type are described separately for each transport. To see the details of a specific transport, see link:/documentation-3.2/display/32X/Transports+Reference[Transports Reference].

== Common Connector Properties

All connectors require that you set the `name` attribute to a unique name for that connector. Additionally, they all include the following common properties.

[width="99a",cols="30a,50a,10a,5a",options="header"]
|===
|Property |Description |Default |Required
|default-connector-exception-strategy |The link:/documentation-3.2/display/32X/Error+Handling[exception strategy] to use when errors occur in the connector. |  |No
|receiver-threading-profile |The threading properties and http://java.sun.com/j2ee/1.4/docs/api/javax/resource/spi/work/WorkManager.html[WorkManager] to use when receiving events from the connector. |The default receiver threading profile set on the link:/documentation-3.2/display/32X/About+the+XML+Configuration+File[Mule Configuration] |Yes
|dispatcher-threading-profile |The threading properties and http://java.sun.com/j2ee/1.4/docs/api/javax/resource/spi/work/WorkManager.html[WorkManager] to use when dispatching events from the connector. |The default dispatcher threading profile set on the link:/documentation-3.2/display/32X/About+Mule+Configuration[Mule Configuration]. |Yes
|connection-strategy |Desupported as of Mule 2.0. Use link:/documentation-3.2/display/32X/Configuring+Reconnection+Strategies[retry policies] instead. |  |No
|service-overrides |A map of link:#ConfiguringaTransport-overrides[MULE3USER:service configuration values] that can be used to override the default configuration for this transport. |  |No
|createMultipleTransactedReceivers |Whether to create multiple concurrent receivers for this connector. This property is used by transports that support transactions, specifically receivers that extend the TransactedPollingMessageReceiver, and provides better throughput. |false |No
|numberOfConcurrentTransactedReceivers |If `createMultipleTransactedReceivers` is set to true, the number of concurrent receivers that will be launched. |  |No
|dynamicNotification |Whether to enable dynamic notification. |false |No
|validateConnections |Causes Mule to validate connections before use. Note that this is only a configuration hint; transport implementations may or may not make an extra effort to validate the connection. |true |No
|===

You can also set a Spring property on a connector. This is useful if you are using a custom connector.

== Retry Policies

Retry policies are used to configure how a connector behaves when its connection fails. For complete information, see link:/documentation-3.2/display/32X/Configuring+Reconnection+Strategies[Configuring Reconnection Strategies].

== Creating Your Own Transport

For information on creating a custom transport for Mule ESB, see link:/documentation-3.2/display/32X/Creating+Transports[Creating Transports].

== Detailed Configuration Information

* Threading profiles
** link:#ConfiguringaTransport-receiverthreadingprofile[MULE3USER:Receiver threading profile]
** link:#ConfiguringaTransport-dispatcherthreadingprofile[MULE3USER:Dispatcher threading profile]
* link:#ConfiguringaTransport-serviceoverrides[MULE3USER:Service overrides]

xslt: Read http://www.mulesource.org/xslt/mule/schemadoc/2.0/single-element-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//single-element-wiki.xsl

xslt: Read http://www.mulesource.org/xslt/mule/schemadoc/2.0/single-element-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//single-element-wiki.xsl

xslt: Read http://www.mulesource.org/xslt/mule/schemadoc/2.0/single-element-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//single-element-wiki.xsl
